--- a/app/templates/app/files_new.html
+++ b/app/templates/app/files_new.html
@@ -17,7 +17,7 @@
             <td>{{ form.comment }}</td>
         </tr>
         <tr>
-            <th>画像</th>
+            <th>ファイル</th>
             <td>{{ form.file }}</td>
         </tr>
     </table>
